hard-gists/11181988/run.log
=== Docker Run Log for 11181988 ===
Started at: Mi 29. Okt 11:52:01 CET 2025

[2025-10-29 11:52:01] START: Running container for 11181988
[2025-10-29 11:52:01] SUCCESS: Container eb1e97feeaba826f536db0a4882734c0b50a3a00fa25f191e6827355b3d7e8c2 started for 11181988
=== Container logs for 11181988 ===
  File "/snippet.py", line 217
    except MySQLdb.ProgrammingError, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 11181988 ===
[2025-10-29 11:52:04] INFO: Container eb1e97feeaba826f536db0a4882734c0b50a3a00fa25f191e6827355b3d7e8c2 has stopped
